--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,7 +22,7 @@ import Layout from "../layouts/Layout.astro";
           <div class="underline"></div>
         </div>
         <div class="input-container">
-          <input type="text" id="location" name="location" required />
+          <input type="text" id="location" name="location" placeholder="" required />
           <label for="input" class="label">Location</label>
           <div class="underline"></div>
         </div>
@@ -64,7 +64,3 @@ import Layout from "../layouts/Layout.astro";
     background-color: #007bff;
   }
 </style>
-<script
-  type="text/javascript"
-  src="https://assets.calendly.com/assets/external/widget.js"
-  async></script>
