styling all done just copy and refactoring

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,10 @@ import Footer from "../components/Footer";
     <meta charset="UTF-8" />
     <meta
       name="Byte Bros Website"
-      content="Byte Bros is a company offering a variety of services ..."
+      content="Byte Bros is an electronic repair company for ecommerce sellers, companies, or any other customers."
     />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="generator" content={Astro.generator} />
     <title>Byte Bros</title>
   </head>
