--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -61,6 +61,6 @@ import Layout from "../layouts/Layout.astro";
 <style>
   .hover-underline-animation:after {
     width: 140%;
-    background-color: #007bff;
+    background-color: #0;
   }
 </style>
