--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,18 +5,25 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Byte Bros">
   <main id="home-container">
     <div class="home-top">
-      <h1 class="home-text-h1">
-        Company Catchprase <span class="home-span">Action Word</span>
-      </h1>
-      <div class="image-container">
-        <img src="./icon.svg" />
+      <div class="home-text-img">
+        <h1 class="home-text-h1">
+          Company Catchprase <span class="home-span">Action Word</span>
+        </h1>
+          <img class="home-icon" src="./icon.svg" />
       </div>
       <div class="trusted-companies">
-        <h3 class="trusted-heading">Trusted by these companies</h3>
+        <h3 class="trusted-heading">Trusted By</h3>
         <div class="company-icons">
-          <img class="company-img" src="./company1.png" alt="new tech wholesalers llc" />
-          <img class="company-img" src="./company2.png" alt="buyers for points" />
-          <!--  -->
+          <img
+            class="company-img"
+            src="./company1.png"
+            alt="new tech wholesalers llc"
+          />
+          <img
+            class="company-img"
+            src="./company2.png"
+            alt="buyers for points"
+          />
         </div>
       </div>
     </div>
