--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Byte Bros">
   <main id="services-container">
-    <h3>Solutions tailored to your needs</h3>
+    <h3>Solutions Tailored to Your Needs</h3>
     <div class="services">
       <div class="card2">
         <div class="icon">
@@ -30,13 +30,13 @@ import Layout from "../layouts/Layout.astro";
         </p>
       </div>
     </div>
-    <h3>For anyone</h3>
+    <h3>For Anyone</h3>
     <div class="services">
       <div class="card2">
         <div class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path fill="currentColor" d="M14.25 21.4q-.575.575-1.425.575T11.4 21.4l-8.8-8.8q-.275-.275-.438-.65T2 11.15V4q0-.825.588-1.413T4 2h7.15q.425 0 .8.163t.65.437l8.8 8.825q.575.575.575 1.413T21.4 14.25l-7.15 7.15ZM12.825 20l7.15-7.15L11.15 4H4v7.15L12.825 20ZM6.5 8q.625 0 1.063-.438T8 6.5q0-.625-.438-1.063T6.5 5q-.625 0-1.063.438T5 6.5q0 .625.438 1.063T6.5 8ZM4 4Z"/></svg>
         </div>
-        <p class="title">Ecom Seller</p>
+        <p class="title">Ecom Sellers</p>
         <p class="text">
           We accept mass ammount of electronics for refurbishing / testing.
         </p>
@@ -45,14 +45,14 @@ import Layout from "../layouts/Layout.astro";
         <div class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16"><path fill="currentColor" d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142a.75.75 0 1 1-1.498.07a4.5 4.5 0 0 0-8.99 0a.75.75 0 0 1-1.498-.07a6.004 6.004 0 0 1 3.431-5.142a3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0a2.5 2.5 0 0 0 5 0Z"/></svg>
         </div>
-        <p class="title">Personal Use</p>
+        <p class="title">Personal Users</p>
         <p class="text">If you're having difficulties with your device.</p>
       </div>
       <div class="card2">
         <div class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path fill="currentColor" d="M18 15h-2v2h2m0-6h-2v2h2m2 6h-8v-2h2v-2h-2v-2h2v-2h-2V9h8M10 7H8V5h2m0 6H8V9h2m0 6H8v-2h2m0 6H8v-2h2M6 7H4V5h2m0 6H4V9h2m0 6H4v-2h2m0 6H4v-2h2m6-10V3H2v18h20V7H12Z"/></svg>
         </div>
-        <p class="title">Company</p>
+        <p class="title">Companies</p>
         <p class="text">
           We serve companies of any size, whether that be in office or elsewhere.
         </p>
@@ -61,7 +61,7 @@ import Layout from "../layouts/Layout.astro";
     <h3>
       <button class="cta">
         <span class="hover-underline-animation"
-          ><a href="contact" class="contact-cta-a">Get In Touch</a></span
+          ><a href="contact" class="contact-cta-a">Get in Touch</a></span
         >
         <svg
           viewBox="0 0 46 16"
@@ -87,6 +87,7 @@ import Layout from "../layouts/Layout.astro";
   }
   .hover-underline-animation:after {
     width: 114%;
+    background-color: #007BFF;
   }
 </style>
 
