--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,12 +12,19 @@ import Layout from "../layouts/Layout.astro";
         <div class="article-body">
           <h2>Our Story</h2>
           <p>
-            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
-            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
-            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
-            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
-            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
-            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+            Our story began 7 years ago when Simcha sat in front of
+            decommissioned computers, driven by the urge to make them work
+            again. After disassembling each one, he successfully created a
+            working computer using old laptop parts – a challenging task
+            considering that everything is soldered to the motherboards in
+            modern laptops. This marked the inception of our journey, where
+            Simcha not only delved into hardware but also became
+            proficient with software to understand both aspects. Furthermore, he
+            reached out to people in need of his services. Every computer
+            problem is unique, demanding extensive knowledge and research to
+            identify its root cause. If you decide to use our service, we
+            guarantee that you will receive your product in a condition as good
+            as new.
           </p>
         </div>
       </div>
@@ -30,12 +37,19 @@ import Layout from "../layouts/Layout.astro";
         <div class="article-body">
           <h2>Our Mission</h2>
           <p>
-            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
-            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
-            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
-            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante,
-            euismod sed lacus sit amet, congue bibendum eros. Etiam mattis
-            lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+            As a business, we aspire to collaborate with more local Miami-based
+            businesses. After gaining experience in a warehouse, where we
+            repaired laptops and tablets for Amazon-affiliated companies, we
+            identified a substantial demand for mass refurbishing services. We
+            are here to meet these demands swiftly and cost-effectively,
+            offering a more efficient solution than employing a full-time worker
+            for refurbishing. Here's how it works: Schedule a pickup with us,
+            and you'll receive your refurbished product back within the week.
+            We'll also provide you with an Excel sheet containing all the
+            necessary information for reselling on platforms like Amazon and
+            eBay. Leave the hassle to us, so you can focus on selling! We look
+            forward to earning your business, and if you have any questions,
+            please don't hesitate to reach out.
           </p>
         </div>
       </div>
