--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -8,21 +8,53 @@ import Layout from "../layouts/Layout.astro";
     <div class="services">
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 36 36"><path fill="currentColor" d="M23.81 26c-.35.9-.94 1.5-1.61 1.5h-8.46c-.68 0-1.26-.6-1.61-1.5H1v1.75A2.45 2.45 0 0 0 3.6 30h28.8a2.45 2.45 0 0 0 2.6-2.25V26Z" class="clr-i-solid clr-i-solid-path-1"/><path fill="currentColor" d="M7 10h22v14h3V7.57A1.54 1.54 0 0 0 30.5 6h-25A1.54 1.54 0 0 0 4 7.57V24h3Z" class="clr-i-solid clr-i-solid-path-2"/><path fill="none" d="M0 0h36v36H0z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 36 36"
+            ><path
+              fill="currentColor"
+              d="M23.81 26c-.35.9-.94 1.5-1.61 1.5h-8.46c-.68 0-1.26-.6-1.61-1.5H1v1.75A2.45 2.45 0 0 0 3.6 30h28.8a2.45 2.45 0 0 0 2.6-2.25V26Z"
+              class="clr-i-solid clr-i-solid-path-1"></path><path
+              fill="currentColor"
+              d="M7 10h22v14h3V7.57A1.54 1.54 0 0 0 30.5 6h-25A1.54 1.54 0 0 0 4 7.57V24h3Z"
+              class="clr-i-solid clr-i-solid-path-2"></path><path
+              fill="none"
+              d="M0 0h36v36H0z"></path></svg
+          >
         </div>
         <p class="title">Computers</p>
         <p class="text">Macbooks and Windows.</p>
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="currentColor" d="M2 2c0-1.1.9-2 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2 0v14h12V2H4zm6 17a1 1 0 1 0 0-2a1 1 0 0 0 0 2z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 20 20"
+            ><path
+              fill="currentColor"
+              d="M2 2c0-1.1.9-2 2-2h12a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2 0v14h12V2H4zm6 17a1 1 0 1 0 0-2a1 1 0 0 0 0 2z"
+            ></path></svg
+          >
         </div>
         <p class="title">Phones / Tablets</p>
         <p class="text">iPads, Galaxy Pads, LG, & more.</p>
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" d="M7.5 6.401V4a2 2 0 0 1 2-2h5a2 2 0 0 1 2 2v2.401A2.999 2.999 0 0 1 18 9v1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1v2a3 3 0 0 1-1.5 2.599V20a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2v-2.401A2.999 2.999 0 0 1 6 15V9a3 3 0 0 1 1.5-2.599Zm2-2.901A.5.5 0 0 0 9 4v2h6V4a.5.5 0 0 0-.5-.5h-5Zm7 11.5V9A1.5 1.5 0 0 0 15 7.5H9A1.5 1.5 0 0 0 7.5 9v6A1.5 1.5 0 0 0 9 16.5h6a1.5 1.5 0 0 0 1.5-1.5ZM9 20a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 .5-.5v-2H9v2Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="60"
+            height="60"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M7.5 6.401V4a2 2 0 0 1 2-2h5a2 2 0 0 1 2 2v2.401A2.999 2.999 0 0 1 18 9v1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1v2a3 3 0 0 1-1.5 2.599V20a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2v-2.401A2.999 2.999 0 0 1 6 15V9a3 3 0 0 1 1.5-2.599Zm2-2.901A.5.5 0 0 0 9 4v2h6V4a.5.5 0 0 0-.5-.5h-5Zm7 11.5V9A1.5 1.5 0 0 0 15 7.5H9A1.5 1.5 0 0 0 7.5 9v6A1.5 1.5 0 0 0 9 16.5h6a1.5 1.5 0 0 0 1.5-1.5ZM9 20a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 .5-.5v-2H9v2Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Smart Watches</p>
         <p class="text">
@@ -34,7 +66,16 @@ import Layout from "../layouts/Layout.astro";
     <div class="services">
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path fill="currentColor" d="M14.25 21.4q-.575.575-1.425.575T11.4 21.4l-8.8-8.8q-.275-.275-.438-.65T2 11.15V4q0-.825.588-1.413T4 2h7.15q.425 0 .8.163t.65.437l8.8 8.825q.575.575.575 1.413T21.4 14.25l-7.15 7.15ZM12.825 20l7.15-7.15L11.15 4H4v7.15L12.825 20ZM6.5 8q.625 0 1.063-.438T8 6.5q0-.625-.438-1.063T6.5 5q-.625 0-1.063.438T5 6.5q0 .625.438 1.063T6.5 8ZM4 4Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M14.25 21.4q-.575.575-1.425.575T11.4 21.4l-8.8-8.8q-.275-.275-.438-.65T2 11.15V4q0-.825.588-1.413T4 2h7.15q.425 0 .8.163t.65.437l8.8 8.825q.575.575.575 1.413T21.4 14.25l-7.15 7.15ZM12.825 20l7.15-7.15L11.15 4H4v7.15L12.825 20ZM6.5 8q.625 0 1.063-.438T8 6.5q0-.625-.438-1.063T6.5 5q-.625 0-1.063.438T5 6.5q0 .625.438 1.063T6.5 8ZM4 4Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Ecom Sellers</p>
         <p class="text">
@@ -43,51 +84,63 @@ import Layout from "../layouts/Layout.astro";
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16"><path fill="currentColor" d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142a.75.75 0 1 1-1.498.07a4.5 4.5 0 0 0-8.99 0a.75.75 0 0 1-1.498-.07a6.004 6.004 0 0 1 3.431-5.142a3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0a2.5 2.5 0 0 0 5 0Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 16 16"
+            ><path
+              fill="currentColor"
+              d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142a.75.75 0 1 1-1.498.07a4.5 4.5 0 0 0-8.99 0a.75.75 0 0 1-1.498-.07a6.004 6.004 0 0 1 3.431-5.142a3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0a2.5 2.5 0 0 0 5 0Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Personal Users</p>
         <p class="text">If you're having difficulties with your device.</p>
       </div>
       <div class="card2">
         <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path fill="currentColor" d="M18 15h-2v2h2m0-6h-2v2h2m2 6h-8v-2h2v-2h-2v-2h2v-2h-2V9h8M10 7H8V5h2m0 6H8V9h2m0 6H8v-2h2m0 6H8v-2h2M6 7H4V5h2m0 6H4V9h2m0 6H4v-2h2m0 6H4v-2h2m6-10V3H2v18h20V7H12Z"/></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="50"
+            height="50"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M18 15h-2v2h2m0-6h-2v2h2m2 6h-8v-2h2v-2h-2v-2h2v-2h-2V9h8M10 7H8V5h2m0 6H8V9h2m0 6H8v-2h2m0 6H8v-2h2M6 7H4V5h2m0 6H4V9h2m0 6H4v-2h2m0 6H4v-2h2m6-10V3H2v18h20V7H12Z"
+            ></path></svg
+          >
         </div>
         <p class="title">Companies</p>
         <p class="text">
-          We serve companies of any size, whether that be in office or elsewhere.
+          We serve companies of any size, whether that be in office or
+          elsewhere.
         </p>
       </div>
     </div>
-    <h3>
-      <button class="cta">
-        <span class="hover-underline-animation"
-          ><a href="contact" class="contact-cta-a">Get in Touch</a></span
-        >
-        <svg
-          viewBox="0 0 46 16"
-          height="20"
-          width="40"
-          xmlns="http://www.w3.org/2000/svg"
-          id="arrow-horizontal"
-        >
-          <path
-            transform="translate(30)"
-            d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-            data-name="Path 10"
-            id="Path_10"></path>
-        </svg>
-      </button>
-    </h3>
+    <div class="btn-separator">
+    <a href="/contact" class="button-blue-cta">
+      Get in Touch
+      <svg fill="currentColor" viewBox="0 0 24 24" class="icon-blue-btn">
+        <path
+          clip-rule="evenodd"
+          d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+          fill-rule="evenodd"></path>
+      </svg>
+    </a>
+  </div>
   </main>
 </Layout>
 
 <style>
-  .cta span {
-    font-size: 40px;
+  .btn-separator {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  .hover-underline-animation:after {
-    width: 114%;
-    background-color: #007BFF;
+  .button-blue-cta {
+    margin-top: 5rem;
+    width: 60vw;
   }
 </style>
 
