--- a/src/main.css
+++ b/src/main.css
@@ -61,6 +61,7 @@ nav a {
     text-decoration: none;
     transition: color 0.3s ease;
     transition: background 0.5 ease;
+    color: black;
 }
 
 .nav-link:hover {
@@ -79,17 +80,12 @@ nav a {
 
     .hamburger {
         display: flex;
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
     }
 
     .nav-links.show {
         display: flex;
         flex-direction: column;
-        background-color: rgba(255, 255, 255, .9);
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
+        background: rgba(255, 255, 255);
         position: absolute;
         top: 100%;
         left: 0;
@@ -110,7 +106,7 @@ nav a {
     }
 }
 
-a {
+footer a {
     color: #000;
     position: relative;
     text-decoration: underline;
@@ -133,7 +129,7 @@ a {
 }
 
 .home-text-img {
-    width: 100vw;
+    width: 90vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -191,8 +187,15 @@ a {
     }
 }
 
+@media screen and (max-width: 450px) {
+    .home-icon {
+        width: 20rem;
+        height: 20rem;
+    }
+}
+
 .home-top {
-    height: 95vh;
+    width: 100vw;
 }
 
 .home-image {
@@ -217,6 +220,12 @@ a {
     justify-content: center;
     align-content: center;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 415px) {
+    .trusted-companies {
+        padding: 0rem;
+    }
 }
 
 .company-icons {
@@ -260,23 +269,14 @@ a {
     }
 }
 
-.testimonials {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    gap: 5rem;
-}
-
 @media screen and (max-width: 1092px) {
-    .testimonials {
+
+    .home-text-top {
         display: flex;
         flex-direction: column;
-    }
-
-    .home-text-h1 {
+        justify-content: center;
+        align-items: center;
         text-align: center;
-        line-height: 5rem;
     }
 }
 
@@ -365,6 +365,7 @@ a {
 
 @media screen and (max-width: 850px) {
     #contact-container {
+        height: 100vh;
         width: 100vw;
     }
 
@@ -606,6 +607,80 @@ footer form {
     transform-origin: bottom left;
 }
 
+/*  */
+/*  */
+/*  */
+
+.button-blue-cta {
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    padding-block: 0.5rem;
+    padding-inline: 1.25rem;
+    background-color: #007BFF;
+    border-radius: 9999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffff;
+    gap: 10px;
+    font-weight: bold;
+    border: 3px solid #e9e9e9;
+    outline: none;
+    overflow: hidden;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.icon-blue-btn {
+    width: 24px;
+    height: 24px;
+    transition: all 0.3s ease-in-out;
+}
+
+.button-blue-cta:hover {
+    transform: scale(1.05);
+    border-color: rgba(227, 240, 255, 0.6);
+}
+
+.button-blue-cta:hover .icon-blue-btn {
+    transform: translate(4px);
+}
+
+.button-blue-cta:hover::before {
+    animation: shine 1.5s ease-out infinite;
+}
+
+.button-blue-cta::before {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 100%;
+    background-image: linear-gradient(120deg,
+            rgba(255, 255, 255, 0) 30%,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0) 70%);
+    top: 0;
+    left: -100px;
+    opacity: 0.6;
+}
+
+@keyframes shine {
+    0% {
+        left: -100px;
+    }
+
+    60% {
+        left: 100%;
+    }
+
+    to {
+        left: 100%;
+    }
+}
+
+
 /* INPUTS */
 
 .input-container {
@@ -688,99 +763,6 @@ footer form {
 
 /* CARDS */
 
-.card {
-    --background: #fff;
-    --cardShadow: rgba(32, 33, 37, .1);
-    --cardShadowHover: rgba(32, 33, 37, .06);
-    --cardShadowActive: rgba(32, 33, 37, .55);
-    --textColor: #000000;
-    --ratingColor: #ffbb2a;
-}
-
-.card {
-    width: 250px;
-    height: 260px;
-    aspect-ratio: 2/3;
-    background: var(--background);
-    color: var(--textColor);
-    border: 1px solid var(--cardBorder);
-    padding: 25px;
-    box-shadow: 8px 8px 0 var(--cardShadow);
-    border-radius: 8px;
-    display: inline-block;
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.5s, transform 2s, box-shadow 0.5s ease-out;
-}
-
-.fade-in {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.icon1 {
-    text-align: center;
-}
-
-.card:hover {
-    transform: translate(-2px, -4px);
-    box-shadow: 16px 16px 0 var(--cardShadowHover);
-}
-
-.card>.icon1,
-.card>.title,
-.card>.description {
-    margin-bottom: 0.7em;
-    cursor: default;
-    user-select: none;
-}
-
-.card>.title {
-    margin-top: 1.5em;
-    font-weight: bold;
-}
-
-.card>.description {
-    line-height: 1.5em;
-    min-height: 6em;
-}
-
-.card>.icon1 {
-    font-size: 3em;
-    margin-bottom: .2em;
-}
-
-.card>.rating {
-    font-size: 1.5em;
-    margin-bottom: 0.8em;
-    color: var(--ratingColor);
-    font-weight: bold;
-    position: relative;
-    width: max-content;
-}
-
-.card>.rating:before {
-    content: "☆☆☆☆☆";
-}
-
-.card>.rating:after {
-    content: "★★★★★";
-    position: absolute;
-    left: 0;
-    z-index: 0;
-    width: calc(var(--rating) * 1%);
-    overflow: hidden;
-}
-
-.card>.link {
-    margin-bottom: 1rem;
-    color: var(--linkColor);
-    font-size: .8em;
-    font-weight: 600;
-}
-
-/*  */
-
 .card2 {
     --cardShadow: rgba(32, 33, 37, .1);
     --cardShadowHover: rgba(32, 33, 37, .06);
@@ -821,7 +803,7 @@ footer form {
     width: 100%;
     height: 80px;
     max-width: 80px;
-    background: linear-gradient(90deg, #ff8800 0%, #ff6700 40%, #fffbf8 60%); 
+    background: linear-gradient(90deg, #ff8800 0%, #ff6700 40%, #fffbf8 60%);
     /* #fff */
     border-radius: 100%;
     display: flex;
